Add customized function to set pcm parameters

Add a fallback function that can be used when the default one fails.

Bug: 908693, b/117101986
Test: Printed log shows the fallback function opens the audio device.
Change-Id: I717e51fc146a0d50c459e9718f25151b4afb2714
Reviewed-on: https://chromium-review.googlesource.com/c/1303355
Reviewed-by: Olga Sharonova <olka@chromium.org>
Reviewed-by: Henrik Grunell <grunell@chromium.org>
Reviewed-by: Kenneth MacKay <kmackay@chromium.org>
Commit-Queue: Kehuang Li <kehuangli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618097}
Former-commit-id: 9c0a48b6d8327b9900bc07439bdcc647fddbad9b